--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="newsletter">Newsletter</string>
     <string name="history">History</string>
     <string name="hello_user">Hello!\n</string>
+    <string name="title_hello">Hello!</string>
+    <string name="user">Rukmini</string>
+    <string name="content_cat">This is cat card</string>
+    <string name="content_dog">This is dog card</string>
 </resources>
