--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="register">Register</string>
     <string name="login">Login</string>
     <string name="login_redirect">Already have an account? Login now!</string>
+    <string name="upload">Upload</string>
 </resources>
