--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="description">Description:\n</string>
     <string name="causes">"Causes: "</string>
     <string name="scan_result">Scan Result</string>
+    <string name="description_not_available">Description: Not Available</string>
+    <string name="symptoms_not_available">Symptoms: Not Available</string>
+    <string name="treatment_not_available">Treatment: Not Available</string>
+    <string name="note_not_available">Note: Not Available</string>
+    <string name="source_not_available">Source: Not Available</string>
 </resources>
