--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="diagnose">Diagnosis Prediction:</string>
     <string name="see_more">See more</string>
     <string name="gallery">Album</string>
+    <string name="description_news">News description</string>
+    <string name="title_news">News title</string>
 </resources>
