--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="p3tskit_desc">P3tsKit Application is an application developed by the C242-PS104 team to assist pet owners, especially those with dogs and cats, in identifying skin issues such as infections or wounds. By simply taking or uploading a photo, users can detect potential problems quickly and accurately. The application utilizes machine learning and cloud computing to process images efficiently, ensuring reliable results. It provides clear information about the detected issue and its treatment, enabling pet owners to take immediate action to care for their pets effectively.</string>
     <string name="CC">Cloud Computing</string>
     <string name="MD">Mobile Development</string>
+    <string name="howtouse">How To Use:\n1. Upload an image of a close-up of your pet\'s disease using a picture from your gallery or capture the image using the camera.\n2. Click on the scan button to identify the disease.\n3. Your pet\'s predicted result is out!</string>
 
     <string-array name="spinner_items">
         <item>P3tsKit Developer</item>
